--- a/index.css
+++ b/index.css
@@ -27,3 +27,33 @@ h1 {
     height: 100px;
     border-radius: 25px;
 }
+
+body{
+    background-image: url("img/biblioteka.jpg" );
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+}
+
+.pretraga {
+    margin-top: 25px;
+    margin-left: 700px;
+}
+
+#searchtabela,
+#tabelasort {
+    margin-top: 30px;
+    width: 1200px;
+    margin-left: 400px;
+}
+
+#tabelaKnjige {
+    margin-top: 10px;
+    width: 1200px;
+    margin-left: 120px;
+}
+
+#dodajKnjigu {
+    margin-top: 35px;
+    margin-left: 550px;
+}
